tests/snapshots/run_wpt_conformance__coreml_quantizeLinear_float32_tensor_with_uint4_zeroPoint_which_has_odd_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 tensor with uint4 zeroPoint which has odd size, coreml
 Failed to build graph: graph conversion failed for coreml: int4/uint4 tensors are not supported in CoreML conversion yet

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[5];
  }

  consts {
    operand_1: f32[1] @bytes([42, 101, 143, 63]);
    operand_2: u4[1] @bytes([160]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
